Improve makefiles in subdirs

--- a/io/Makefile
+++ b/io/Makefile
@@ -8,10 +8,10 @@ target: $(objects)
 
 %.o: %.F90
 	$(CPP) $(CPPFLAGS) $< > $*.f90
-	$(FC) $(FCFLAGS) $(STATE_INCLUDE) -c $*.f90
+	$(FC) $(FCFLAGS) $(STATE_INCLUDE) -I$(DIR_NETCDF)/include -c $*.f90
 
 clean:
-	rm -f ./*.o ./*.exe ./*.mod  ./*.f90
+	rm -f ./*.o ./*.mod  ./*.f90
 
   # Dependencies
 geogrid_mod.o: netcdf_mod.o ../state/grid_mod.o
