Adds Test4 to check real fire simulations

--- a/io/Makefile
+++ b/io/Makefile
@@ -8,7 +8,7 @@ target: $(objects)
 
 %.o: %.F90
 	$(CPP) $(CPPFLAGS) $< > $*.f90
-	$(FC) $(FCFLAGS) $(STATE_INCLUDE) -I$(DIR_NETCDF)/include -c $*.f90
+	$(FC) $(FCFLAGS) $(STATE_INCLUDE) -c $*.f90
 
 clean:
 	rm -f ./*.o ./*.mod  ./*.f90
