--- a/io/Makefile
+++ b/io/Makefile
@@ -1,14 +1,11 @@
 
-STATE_DIR = ../state
-STATE_INCLUDE="-I$(STATE_DIR)"
-
-objects = netcdf_mod.o geogrid_mod.o namelist_mod.o
+objects = netcdf_mod.o geogrid_mod.o namelist_mod.o namelist_wrf_mod.o
 
 target: $(objects)
 
 %.o: %.F90
 	$(CPP) $(CPPFLAGS) $< > $*.f90
-	$(FC) $(FCFLAGS) $(STATE_INCLUDE) -c $*.f90
+	$(FC) $(FCFLAGS) -c $*.f90
 
 clean:
 	rm -f ./*.o ./*.mod  ./*.f90
