Moves the domain type definition to the state module

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -31,12 +31,12 @@ clean:
 fire_behavior.o: ../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver_wrf.o \
 	wrf_fire_test1_mod.o wrf_fire_test2_mod.o wrf_fire_test3_mod.o wrf_fire_test4_mod.o ../io/namelist_mod.o
 
-wrf_fire_test1_mod.o: ../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
+wrf_fire_test1_mod.o: ../state/state_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
 
-wrf_fire_test2_mod.o: ../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
+wrf_fire_test2_mod.o: ../state/state_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
 
-wrf_fire_test3_mod.o: ../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
+wrf_fire_test3_mod.o: ../state/state_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
 
-wrf_fire_test4_mod.o: ../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_util.o ../io/geogrid_mod.o \
+wrf_fire_test4_mod.o: ../state/state_mod.o ../physics/module_fr_fire_util.o ../io/geogrid_mod.o \
 	../state/state_mod.o ../io/namelist_mod.o
 
