--- a/physics/Makefile
+++ b/physics/Makefile
@@ -2,31 +2,38 @@
 IO_DIR = ../io
 IO_INCLUDE="-I$(IO_DIR)"
 
+STATE_DIR = ../state
+STATE_INCLUDE="-I$(STATE_DIR)"
+
 objects = wrf_atmosphere_mod.o module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o \
 	 module_fr_fire_model.o module_fr_fire_atm.o module_fr_fire_driver.o module_fr_fire_driver_wrf.o module_fr_fire_util.o
 
 target: $(objects)
 %.o: %.F
 	$(CPP) $(CPPFLAGS) $< > $*.f90
-	$(FC) $(IO_INCLUDE) $(FCFLAGS) -c $*.f90
+	$(FC) $(IO_INCLUDE) $(STATE_INCLUDE) $(FCFLAGS) -c $*.f90
 
 clean:
 	rm -f ./*.o ./*.mod  ./*.f90
 
   # Dependencies
-module_fr_fire_driver_wrf.o: module_fr_fire_driver.o module_fr_fire_atm.o module_fr_fire_util.o ../io/namelist_mod.o
+module_fr_fire_driver_wrf.o: wrf_atmosphere_mod.o module_fr_fire_driver.o module_fr_fire_atm.o module_fr_fire_util.o \
+	 ../io/namelist_mod.o ../state/state_mod.o
 
-module_fr_fire_driver.o: wrf_atmosphere_mod.o module_fr_fire_util.o module_fr_fire_phys.o ../io/namelist_mod.o
+module_fr_fire_driver.o: wrf_atmosphere_mod.o module_fr_fire_util.o module_fr_fire_phys.o \
+	../io/namelist_mod.o ../state/state_mod.o
 
-module_fr_fire_atm.o: wrf_atmosphere_mod.o module_fr_fire_util.o
+module_fr_fire_atm.o: wrf_atmosphere_mod.o module_fr_fire_util.o ../state/state_mod.o
 
-module_fr_fire_model.o: wrf_atmosphere_mod.o module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o ../io/namelist_mod.o
+module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o \
+	../io/namelist_mod.o ../state/state_mod.o
 
-module_fr_fire_core.o: wrf_atmosphere_mod.o module_fr_fire_phys.o module_fr_fire_util.o ../io/namelist_mod.o
+module_fr_fire_core.o: wrf_atmosphere_mod.o module_fr_fire_phys.o module_fr_fire_util.o \
+	../io/namelist_mod.o ../state/state_mod.o
 
 module_fr_fire_phys.o: wrf_atmosphere_mod.o module_fr_fire_util.o
 
 module_fr_fire_util.o: wrf_atmosphere_mod.o
 
-wrf_atmosphere_mod.o: ../io/namelist_mod.o
+wrf_atmosphere_mod.o: ../io/namelist_mod.o ../state/state_mod.o
 
