--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,6 +8,9 @@ IO_INCLUDE="-I$(IO_DIR)"
 STATE_DIR = ../state
 STATE_INCLUDE="-I$(STATE_DIR)"
 
+DRIVER_DIR = ../driver
+DRIVER_INCLUDE="-I$(DRIVER_DIR)"
+
 all: fire_behavior.exe
 
 objects = fire_behavior.o wrf_fire_test1_mod.o wrf_fire_test2_mod.o wrf_fire_test3_mod.o wrf_fire_test4_mod.o
@@ -15,20 +18,20 @@ objects = fire_behavior.o wrf_fire_test1_mod.o wrf_fire_test2_mod.o wrf_fire_tes
 objects_io = ../io/geogrid_mod.o ../io/netcdf_mod.o
 
 fire_behavior.exe: fire_behavior.o wrf_fire_test1_mod.o wrf_fire_test2_mod.o wrf_fire_test3_mod.o wrf_fire_test4_mod.o \
-	../io/geogrid_mod.o ../io/netcdf_mod.o ../io/namelist_mod.o ../state/state_mod.o \
+	../io/geogrid_mod.o ../io/netcdf_mod.o ../io/namelist_mod.o ../state/state_mod.o ../driver/initialize_mod.o ../driver/advance_mod.o \
 	../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver.o ../physics/module_fr_fire_driver_wrf.o ../physics/module_fr_fire_util.o \
 	../physics/module_fr_fire_atm.o ../physics/module_fr_fire_model.o ../physics/module_fr_fire_core.o ../physics/module_fr_fire_phys.o
 	$(FC) -lnetcdf -lnetcdff $^ -o $@
 
 %.o: %.F90
 	$(CPP) $(CPPFLAGS) $< > $*.f90
-	$(FC) $(FCFLAGS) $(PHYSICS_INCLUDE) $(STATE_INCLUDE) $(IO_INCLUDE) -c $*.f90
+	$(FC) $(FCFLAGS) $(PHYSICS_INCLUDE) $(STATE_INCLUDE) $(IO_INCLUDE) $(DRIVER_INCLUDE) -c $*.f90
 
 clean:
 	rm -f ./*.o ./*.exe ./*.mod  ./*.f90
 
   # Dependencies
-fire_behavior.o: ../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver_wrf.o \
+fire_behavior.o: ../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver_wrf.o ../driver/initialize_mod.o ../driver/advance_mod.o \
 	wrf_fire_test1_mod.o wrf_fire_test2_mod.o wrf_fire_test3_mod.o wrf_fire_test4_mod.o ../io/namelist_mod.o
 
 wrf_fire_test1_mod.o: ../state/state_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
