--- a/driver/Makefile
+++ b/driver/Makefile
@@ -19,7 +19,7 @@ target: $(objects)
 clean:
 	rm -f ./*.o ./*.mod  ./*.f90
 
-initialize_mod.o: ../state/state_mod.o ../io/namelist_mod.o ../physics/module_fr_fire_driver_wrf.o
+initialize_mod.o: ../state/state_mod.o ../io/namelist_mod.o ../io/geogrid_mod.o ../physics/module_fr_fire_driver_wrf.o
 
 advance_mod.o: ../state/state_mod.o ../io/namelist_mod.o ../physics/module_fr_fire_driver_wrf.o
 
