--- a/tests/Makefile
+++ b/tests/Makefile
@@ -13,11 +13,11 @@ DRIVER_INCLUDE="-I$(DRIVER_DIR)"
 
 all: fire_behavior.exe
 
-objects = fire_behavior.o wrf_fire_test1_mod.o wrf_fire_test2_mod.o wrf_fire_test3_mod.o wrf_fire_test4_mod.o
+objects = fire_behavior.o
 
 objects_io = ../io/geogrid_mod.o ../io/netcdf_mod.o
 
-fire_behavior.exe: fire_behavior.o wrf_fire_test1_mod.o wrf_fire_test2_mod.o wrf_fire_test3_mod.o wrf_fire_test4_mod.o \
+fire_behavior.exe: fire_behavior.o \
 	../io/geogrid_mod.o ../io/netcdf_mod.o ../io/namelist_mod.o ../state/state_mod.o ../driver/initialize_mod.o ../driver/advance_mod.o \
 	../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver.o ../physics/module_fr_fire_driver_wrf.o ../physics/module_fr_fire_util.o \
 	../physics/module_fr_fire_atm.o ../physics/module_fr_fire_model.o ../physics/module_fr_fire_core.o ../physics/module_fr_fire_phys.o
@@ -31,15 +31,5 @@ clean:
 	rm -f ./*.o ./*.exe ./*.mod  ./*.f90
 
   # Dependencies
-fire_behavior.o: ../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver_wrf.o ../driver/initialize_mod.o ../driver/advance_mod.o \
-	wrf_fire_test1_mod.o wrf_fire_test2_mod.o wrf_fire_test3_mod.o wrf_fire_test4_mod.o ../io/namelist_mod.o
-
-wrf_fire_test1_mod.o: ../state/state_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
-
-wrf_fire_test2_mod.o: ../state/state_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
-
-wrf_fire_test3_mod.o: ../state/state_mod.o ../physics/module_fr_fire_util.o ../io/namelist_mod.o
-
-wrf_fire_test4_mod.o: ../state/state_mod.o ../physics/module_fr_fire_util.o ../io/geogrid_mod.o \
-	../state/state_mod.o ../io/namelist_mod.o
+fire_behavior.o: ../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver_wrf.o ../driver/initialize_mod.o ../driver/advance_mod.o
 
