continue impro initialization state

--- a/state/Makefile
+++ b/state/Makefile
@@ -14,4 +14,4 @@ clean:
 	rm -f ./*.o ./*.mod  ./*.f90
 
   # Dependencies
-state_mod.o: ../io/namelist_mod.o
+state_mod.o: ../io/namelist_mod.o ../io/geogrid_mod.o
