--- a/io/Makefile
+++ b/io/Makefile
@@ -5,7 +5,7 @@ target: $(objects)
 
 %.o: %.F90
 	$(CPP) $(CPPFLAGS) $< > $*.f90
-	$(FC) $(FCFLAGS) -c $*.f90
+	$(FC) $(FCFLAGS) $(NETCDF_INCLUDE) -c $*.f90
 
 clean:
 	rm -f ./*.o ./*.mod  ./*.f90
