--- a/driver/Makefile
+++ b/driver/Makefile
@@ -8,13 +8,9 @@ STATE_INCLUDE="-I$(STATE_DIR)"
 IO_DIR = ../io
 IO_INCLUDE="-I$(IO_DIR)"
 
-objects = initialize_mod.o advance_mod.o
-
-target: fire_behavior.exe
-
 fire_behavior.exe: fire_behavior.o \
-	../io/geogrid_mod.o ../io/netcdf_mod.o ../io/namelist_mod.o ../state/state_mod.o ../state/proj_lc_mod.o \
-	../driver/initialize_mod.o ../driver/advance_mod.o ../state/datetime_mod.o \
+	../io/geogrid_mod.o ../io/netcdf_mod.o ../io/namelist_mod.o ../state/state_mod.o ../share/proj_lc_mod.o \
+	initialize_mod.o advance_mod.o ../share/datetime_mod.o \
 	../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver.o ../physics/module_fr_fire_driver_wrf.o ../physics/module_fr_fire_util.o \
 	../physics/module_fr_fire_atm.o ../physics/module_fr_fire_model.o ../physics/module_fr_fire_core.o ../physics/module_fr_fire_phys.o
 	$(FC) $^ -o $@ $(NETCDF_LIBS)
