--- a/nuopc/Makefile
+++ b/nuopc/Makefile
@@ -14,7 +14,7 @@ endif
 
 include $(ESMFMKFILE)
 
-esmApp.exe: esmApp.o esm.o fire_behavior_nuopc.o ../state/proj_lc_mod.o ../state/datetime_mod.o \
+esmApp.exe: esmApp.o esm.o fire_behavior_nuopc.o ../share/proj_lc_mod.o ../share/datetime_mod.o \
 	../io/geogrid_mod.o ../io/netcdf_mod.o ../io/namelist_mod.o ../state/state_mod.o ../driver/initialize_mod.o ../driver/advance_mod.o \
 	../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver.o ../physics/module_fr_fire_driver_wrf.o ../physics/module_fr_fire_util.o \
 	../physics/module_fr_fire_atm.o ../physics/module_fr_fire_model.o ../physics/module_fr_fire_core.o ../physics/module_fr_fire_phys.o
