--- a/driver/Makefile
+++ b/driver/Makefile
@@ -10,7 +10,7 @@ IO_INCLUDE="-I$(IO_DIR)"
 
 fire_behavior.exe: fire_behavior.o \
 	../io/geogrid_mod.o ../io/netcdf_mod.o ../io/namelist_mod.o ../state/state_mod.o ../share/proj_lc_mod.o \
-	initialize_mod.o advance_mod.o ../share/datetime_mod.o \
+	initialize_mod.o advance_mod.o ../share/datetime_mod.o ../io/wrf_mod.o \
 	../physics/wrf_atmosphere_mod.o ../physics/module_fr_fire_driver.o ../physics/module_fr_fire_driver_wrf.o ../physics/module_fr_fire_util.o \
 	../physics/module_fr_fire_atm.o ../physics/module_fr_fire_model.o ../physics/module_fr_fire_core.o ../physics/module_fr_fire_phys.o
 	$(FC) $^ -o $@ $(NETCDF_LIBS)
@@ -23,7 +23,7 @@ clean:
 	rm -f ./*.o ./*.mod  ./*.f90 ./*.exe
 
   # Dependencies
-fire_behavior.o: ../state/state_mod.o ../io/namelist_mod.o initialize_mod.o advance_mod.o
+fire_behavior.o: ../state/state_mod.o ../io/namelist_mod.o initialize_mod.o advance_mod.o ../io/wrf_mod.o
 
 initialize_mod.o: ../state/state_mod.o ../io/namelist_mod.o ../io/geogrid_mod.o ../physics/module_fr_fire_driver_wrf.o
 
