--- a/physics/Makefile
+++ b/physics/Makefile
@@ -20,10 +20,10 @@ clean:
 module_fr_fire_driver_wrf.o: wrf_atmosphere_mod.o module_fr_fire_driver.o module_fr_fire_atm.o module_fr_fire_util.o \
 	 ../io/namelist_mod.o ../state/state_mod.o
 
-module_fr_fire_driver.o: wrf_atmosphere_mod.o module_fr_fire_util.o module_fr_fire_phys.o \
+module_fr_fire_driver.o: wrf_atmosphere_mod.o module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o module_fr_fire_model.o \
 	../io/namelist_mod.o ../state/state_mod.o
 
-module_fr_fire_atm.o: wrf_atmosphere_mod.o module_fr_fire_util.o ../state/state_mod.o
+module_fr_fire_atm.o: wrf_atmosphere_mod.o module_fr_fire_util.o ../state/state_mod.o ../io/namelist_mod.o
 
 module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o \
 	../io/namelist_mod.o ../state/state_mod.o
