--- a/physics/Makefile
+++ b/physics/Makefile
@@ -28,12 +28,10 @@ module_fr_fire_atm.o: wrf_atmosphere_mod.o module_fr_fire_util.o ../state/state_
 module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o \
 	../io/namelist_mod.o ../state/state_mod.o
 
-module_fr_fire_core.o: wrf_atmosphere_mod.o module_fr_fire_phys.o module_fr_fire_util.o \
+module_fr_fire_core.o: module_fr_fire_phys.o module_fr_fire_util.o \
 	../io/namelist_mod.o ../state/state_mod.o
 
 module_fr_fire_phys.o: wrf_atmosphere_mod.o module_fr_fire_util.o
-
-module_fr_fire_util.o: wrf_atmosphere_mod.o
 
 wrf_atmosphere_mod.o: ../state/state_mod.o
 
