--- a/physics/Makefile
+++ b/physics/Makefile
@@ -8,7 +8,7 @@ STATE_INCLUDE="-I$(STATE_DIR)"
 SHARE_DIR = ../share
 SHARE_INCLUDE="-I$(SHARE_DIR)"
 
-objects = wrf_atmosphere_mod.o module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o \
+objects = module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o \
 	 module_fr_fire_model.o module_fr_fire_atm.o module_fr_fire_driver.o module_fr_fire_driver_wrf.o module_fr_fire_util.o
 
 target: $(objects)
@@ -20,7 +20,7 @@ clean:
 	rm -f ./*.o ./*.mod  ./*.f90
 
   # Dependencies
-module_fr_fire_driver_wrf.o: wrf_atmosphere_mod.o module_fr_fire_driver.o module_fr_fire_atm.o module_fr_fire_util.o \
+module_fr_fire_driver_wrf.o: module_fr_fire_driver.o module_fr_fire_atm.o module_fr_fire_util.o \
 	 ../io/namelist_mod.o ../io/wrf_mod.o ../state/state_mod.o ../share/constants_mod.o
 
 module_fr_fire_driver.o: module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o module_fr_fire_model.o \
@@ -35,6 +35,4 @@ module_fr_fire_core.o: module_fr_fire_phys.o module_fr_fire_util.o \
 	../io/namelist_mod.o ../state/state_mod.o
 
 module_fr_fire_phys.o: module_fr_fire_util.o ../share/constants_mod.o
-
-wrf_atmosphere_mod.o: ../state/state_mod.o
 
