Use vars dictionary in ESMX tests

--- a/tests/esmxRun.config
+++ b/tests/esmxRun.config
@@ -2,7 +2,7 @@ logKindFlag:            ESMF_LOGKIND_MULTI
 globalResourceControl:  .true.
 
 ESMX_log_flush:        .true.
-#ESMX_field_dictionary: ./fd_nems.yaml
+ESMX_field_dictionary: ./fd_nems.yaml
 
 ESMX_component_list:   MDL
 ESMX_attributes::
