Update compiling for portability and add CI
* update esmxBuild.yaml and esmxRun.yaml for v8.5.0
* add --test, --nuopc, --esmx options to compile.sh
* add NUOPC and ESMX options to CMakeLists.txt
* add fire_behavior_wrfnuopc to build and ESMX
* build fire_behavior.exe with CMake
* update exe installation location for Make
* default to no environment file
* add --env-auto and --env-file to compile.sh
* add system tests with ctest test7 test8 test7esmf test8esmf
* cleanup test drivers test7.s test8.s test7esmf.s test8esmf.s
* create CI test for pull requests
* add ESMX testing, test7esmx test8esmx, testx
* rename and cleanup field dictionary file fd_fire.yaml
* update cheyenne environment to use ESMF 8.5.0

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -18,7 +18,8 @@ fire_behavior.exe: fire_behavior.o \
 	../physics/module_fr_fire_model.o ../physics/module_fr_fire_core.o ../physics/module_fr_fire_phys.o \
         ../physics/module_fr_fire_fuel_moisture_model.o ../physics/module_fr_fire_fuel_anderson_mod.o \
 	../physics/ignition_line_mod.o ../physics/ros_wrffire_mod.o
-	$(FC) $^ -o $@ $(NETCDF_LIBS)
+	mkdir -p ../install/bin
+	$(FC) $^ -o ../install/bin/$@ $(NETCDF_LIBS)
 
 %.o: %.F90
 	$(CPP) $(CPPFLAGS) $< > $*.f90
