--- a/nuopc/Makefile
+++ b/nuopc/Makefile
@@ -32,7 +32,7 @@ clean:
   # Dependencies
 fire_behavior_nuopc.o: ../state/state_mod.o ../io/namelist_mod.o ../driver/initialize_mod.o ../driver/advance_mod.o
 
-wrf_nuopc.o: ../io/wrf_mod.o ../share/datetime_mod.o ../io/namelist_mod.o
+wrf_nuopc.o: ../io/wrf_mod.o ../share/datetime_mod.o ../io/namelist_mod.o ../driver/initialize_mod.o
 
 esmApp.o: esm.o
 
