--- a/physics/Makefile
+++ b/physics/Makefile
@@ -27,10 +27,10 @@ module_fr_fire_driver.o: module_fr_fire_util.o module_fr_fire_phys.o module_fr_f
 	../io/namelist_mod.o ../state/state_mod.o
 
 module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o \
-	../io/namelist_mod.o ../state/state_mod.o
+	../io/namelist_mod.o
 
 module_fr_fire_core.o: module_fr_fire_phys.o module_fr_fire_util.o \
-	../io/namelist_mod.o ../state/state_mod.o
+	../io/namelist_mod.o
 
 module_fr_fire_phys.o: module_fr_fire_util.o ../share/constants_mod.o
 
