Creating fuel_anderson_mod

--- a/driver/Makefile
+++ b/driver/Makefile
@@ -16,7 +16,7 @@ fire_behavior.exe: fire_behavior.o \
 	initialize_mod.o advance_mod.o ../share/datetime_mod.o ../io/wrf_mod.o ../share/constants_mod.o \
 	../physics/module_fr_fire_driver.o ../physics/module_fr_fire_util.o \
 	../physics/module_fr_fire_model.o ../physics/module_fr_fire_core.o ../physics/module_fr_fire_phys.o \
-        ../physics/module_fr_fire_fuel_moisture_model.o
+        ../physics/module_fr_fire_fuel_moisture_model.o ../physics/module_fr_fire_fuel_anderson_mod.o
 	$(FC) $^ -o $@ $(NETCDF_LIBS)
 
 %.o: %.F90
