--- a/physics/Makefile
+++ b/physics/Makefile
@@ -10,7 +10,7 @@ SHARE_INCLUDE="-I$(SHARE_DIR)"
 
 objects = module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o \
 	 module_fr_fire_model.o module_fr_fire_driver.o module_fr_fire_util.o \
-         module_fr_fire_fuel_moisture_model.o
+         module_fr_fire_fuel_moisture_model.o module_fr_fire_fuel_anderson_mod.o
 
 target: $(objects)
 %.o: %.F
@@ -22,12 +22,15 @@ clean:
 
   # Dependencies
 module_fr_fire_driver.o: module_fr_fire_util.o module_fr_fire_phys.o module_fr_fire_core.o module_fr_fire_model.o \
-	module_fr_fire_fuel_moisture_model.o ../io/namelist_mod.o ../state/state_mod.o
+	module_fr_fire_fuel_moisture_model.o module_fr_fire_fuel_anderson_mod.o ../io/namelist_mod.o ../state/state_mod.o
 
 module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o
 
 module_fr_fire_core.o: module_fr_fire_phys.o module_fr_fire_util.o
 
-module_fr_fire_phys.o: module_fr_fire_fuel_moisture_model.o module_fr_fire_util.o ../share/constants_mod.o
+module_fr_fire_phys.o: module_fr_fire_fuel_moisture_model.o module_fr_fire_util.o ../share/constants_mod.o \
+        module_fr_fire_fuel_anderson_mod.o
 
 module_fr_fire_fuel_moisture_model.o: module_fr_fire_util.o
+
+module_fr_fire_fuel_anderson_mod.o: module_fr_fire_fuel_moisture_model.o
