The fmc model depends on adnerson module

--- a/physics/Makefile
+++ b/physics/Makefile
@@ -31,6 +31,5 @@ module_fr_fire_core.o: module_fr_fire_phys.o module_fr_fire_util.o
 module_fr_fire_phys.o: module_fr_fire_fuel_moisture_model.o module_fr_fire_util.o ../share/constants_mod.o \
         module_fr_fire_fuel_anderson_mod.o
 
-module_fr_fire_fuel_moisture_model.o: module_fr_fire_util.o
+module_fr_fire_fuel_moisture_model.o: module_fr_fire_fuel_anderson_mod.o module_fr_fire_util.o
 
-module_fr_fire_fuel_anderson_mod.o: module_fr_fire_fuel_moisture_model.o
