Refinements initalization ignitions

--- a/physics/Makefile
+++ b/physics/Makefile
@@ -34,5 +34,5 @@ module_fr_fire_phys.o: module_fr_fire_fuel_moisture_model.o module_fr_fire_util.
 
 module_fr_fire_fuel_moisture_model.o: module_fr_fire_fuel_anderson_mod.o module_fr_fire_util.o
 
-ignition_line_mod.o: ../io/namelist_mod.o
+ignition_line_mod.o: ../io/namelist_mod.o module_fr_fire_util.o
 
