Add ros derived type for wrffire

--- a/physics/Makefile
+++ b/physics/Makefile
@@ -26,7 +26,8 @@ module_fr_fire_driver.o: module_fr_fire_util.o module_fr_fire_model.o ros_wrffir
 	module_fr_fire_fuel_moisture_model.o module_fr_fire_fuel_anderson_mod.o ignition_line_mod.o \
 	../io/namelist_mod.o ../state/state_mod.o
 
-module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o ignition_line_mod.o
+module_fr_fire_model.o: module_fr_fire_core.o module_fr_fire_phys.o module_fr_fire_util.o ignition_line_mod.o \
+	ros_wrffire_mod.o
 
 module_fr_fire_core.o: module_fr_fire_util.o ignition_line_mod.o ros_wrffire_mod.o ../state/state_mod.o
 
@@ -37,4 +38,5 @@ module_fr_fire_fuel_moisture_model.o: module_fr_fire_fuel_anderson_mod.o module_
 
 ignition_line_mod.o: ../io/namelist_mod.o module_fr_fire_util.o
 
-ros_wrffire_mod.o: ../share/constants_mod.o module_fr_fire_fuel_moisture_model.o module_fr_fire_util.o
+ros_wrffire_mod.o: module_fr_fire_fuel_anderson_mod.o module_fr_fire_util.o ../share/constants_mod.o \
+	../state/state_mod.o ../io/namelist_mod.o
